final project done

--- a/index.html
+++ b/index.html
@@ -32,11 +32,10 @@
     </table>
 
     <div class="endgame">
-      <div class="text">
-
-      </div>
+       <div class="text"></div>
+   <button onClick="startGame()">REPLAY!</button>
     </div>
-    <button onClick="startGame()">REPLAY!</button>
+
 <script src="script.js"></script>
 </body>
 </html>
